fix bugs approve request